--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -12,7 +12,7 @@ table
 div[class*="language-"]
   border-radius 0
 
-a.header-anchor
-  opacity 0.5
-  text-decoration none
+// a.header-anchor
+//   opacity 0.5
+//   text-decoration none
 
