--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -6,6 +6,20 @@
   z-index: 10;
   position: relative;
   height: 64px;
+  .logo-box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    .logo {
+      height: 43px;
+    }
+    .logo-title {
+      font-size: 20px;
+      color: #2c3e50;
+      font-weight: 600;
+      padding: 0 15px;
+    }
+  }
   .menu {
     float: right;
     overflow: hidden;
