--- a/src/components/footer/index.less
+++ b/src/components/footer/index.less
@@ -18,7 +18,13 @@
       letter-spacing: 25px;
     }
     .content {
-      padding-top: 160px;
+      padding: 200px 100px 50px;
+      .item {
+        margin: 12px 0;
+      }
+      .icons {
+        margin-top: 25px;
+      }
     }
   }
 }
