--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -44,5 +44,34 @@
         }
       }
     }
+    
+  }
+}
+
+.ecosystem-menu {
+  height: 70px!important;
+}
+
+.ecosystem-item {
+  height: 60px;
+  padding: 5px 0;
+  a {
+    color: rgba(0, 0, 0, 0.65)!important;
+    &:hover {
+      color: @primary-color!important;
+    }
+  }
+  .tit {
+    margin-bottom: 0;
+    margin-top: 5px;
+    font-weight: 800;
+    height: 25px;
+    line-height: 25px;
+  }
+  .desc {
+    margin-bottom: 5px;
+    margin-top: 0;
+    height: 25px;
+    line-height: 25px;
   }
 }
